[package]
name = "fish_torrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
urlencoding = "2.1.3"
mio = { version = "0.8", features = ["os-poll", "net", "os-ext"] }
bendy = { version = "^0.3", features = ["serde", "serde_bytes"] }
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0.193", features = ["serde_derive", "derive"] }
serde_bytes = "0.11.12"
memmap2 = "0.9.0"
sha1 = "0.10.6"
url = "2.5.0"
anyhow = "1.0.75"

[dev-dependencies]
hex = "0.4.3"
rusty-fork = "0.3.0"
